# dbt-ext

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
dbt_ext/: __init__.py  extension.py  main.py  pass_through.py
dbt_ext/dbt_files/: __init__.py
dbt_ext/dbt_files/bundle/transform/: dbt_project.yml
dbt_ext/dbt_files/profiles/athena/: profiles.yml
dbt_ext/dbt_files/profiles/bigquery/: profiles.yml
dbt_ext/dbt_files/profiles/clickhouse/: profiles.yml
dbt_ext/dbt_files/profiles/duckdb/: profiles.yml
dbt_ext/dbt_files/profiles/postgres/: profiles.yml
dbt_ext/dbt_files/profiles/redshift/: profiles.yml
dbt_ext/dbt_files/profiles/snowflake/: profiles.yml
dbt_ext/files/profiles/bigquery/: profiles.yaml
dbt_ext/files/profiles/redshift/: profiles.yml
files_dbt_ext/bundle/transform/: dbt_project.yml
files_dbt_ext/profiles/bigquery/: profiles.yaml
files_dbt_ext/profiles/duckdb/: profiles.yml
files_dbt_ext/profiles/redshift/: profiles.yml
tests/: test_dbt_ext.py
