[tool.poetry]
name = "meltano-dbt-ext"
version = "0.0.0"
description = "A Meltano utility extension to manage dbt projects."
authors = ["Meltano Team and Contributors <hello@meltano.com>"]
maintainers = ["Meltano Team and Contributors <hello@meltano.com>"]
readme = "README.md"
homepage = "https://meltano.com"
repository = "https://github.com/meltano/dbt-ext"
license = "Apache-2.0"

packages = [
    { include = "dbt_ext" },
]

# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_dbt-ext/"
include = [
    {path = "files_dbt_ext"},
]

[tool.poetry.dependencies]
python = ">=3.8"
PyYAML = "^6.0.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk"= { version = "~=0.4.0", python = "<4" }
importlib-resources = ">=5.9.0,<6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = ">=23"
isort = ">=5.13"
flake8 = ">=5"
pre-commit = ">=3"
pytest = ">=8"

[build-system]
requires = ["poetry-core>=1.9,<2", "poetry-dynamic-versioning>=1,<2"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
dbt_extension = 'dbt_ext.main:app'
dbt_invoker = 'dbt_ext.pass_through:pass_through_cli'

[tool.poetry-dynamic-versioning]
enable = true
