[tool.poetry]
name = "meltano-dbt-ext"
version = "0.0.0"
description = "A Meltano utility extension to manage dbt projects."
authors = ["Meltano Team and Contributors <hello@meltano.com>"]
maintainers = ["Meltano Team and Contributors <hello@meltano.com>"]
readme = "README.md"
homepage = "https://meltano.com"
repository = "https://github.com/meltano/dbt-ext"
license = "Apache-2.0"

packages = [
    { include = "dbt_ext" },
]

# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_dbt-ext/"
include = [
    {path = "files_dbt_ext"},
]

[tool.poetry.dependencies]
python = ">=3.10"
PyYAML = ">=6.0.0"
click = ">=8.3.0,<8.4.0"
typer = ">=0.18.0,<0.19.0"
"meltano.edk"= { version = "~=0.5.0", python = "<4" }

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
pytest = ">=8"
ruff = ">=0.13.1"

[build-system]
requires = ["poetry-core>=2,<3", "poetry-dynamic-versioning>=1,<2"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
dbt_extension = 'dbt_ext.main:app'
dbt_invoker = 'dbt_ext.pass_through:pass_through_cli'

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "ANN",  # flake8-annotations
    "C901", # mccabe
    "PERF", # pyperf
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
