[project]
name = "meltano-dbt-ext"
dynamic = ["version"]
description = "A Meltano utility extension to manage dbt projects."
authors = [{ name = "Meltano Team and Contributors", email = "hello@meltano.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
maintainers = [{ name = "Meltano Team and Contributors", email = "hello@meltano.com" }]
dependencies = [
    "PyYAML>=6.0.0",
    "click>=8.3.0,<8.4.0",
    "typer>=0.18.0,<0.19.0",
    "meltano.edk~=0.5.0",
]

[project.urls]
Homepage = "https://meltano.com"
Repository = "https://github.com/meltano/dbt-ext"

[project.scripts]
dbt_extension = "dbt_ext.main:app"
dbt_invoker = "dbt_ext.pass_through:pass_through_cli"

[dependency-groups]
dev = [
    "pre-commit>=3",
    "pytest>=9",
    "ruff>=0.15",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.hatch.build.targets.sdist]
packages = ["dbt_ext"]

[tool.hatch.build.targets.wheel]
packages = ["dbt_ext"]

[build-system]
requires = ["hatchling>=1,<2", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "ANN",  # flake8-annotations
    "C901", # mccabe
    "PERF", # pyperf
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
